[package]
name = "update_playlist"
version = "0.1.0"
edition = "2024"
description = "Loads the videos of a youtube playlist into a file, which a shortcut can then traverse to add to other systems."
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.samply]
inherits = "release"
debug = true
